vlib/v/checker/tests/chan_unknown_err.vv
module main

struct DoesNotExists {}

struct ChanBug {
pub mut:
	bug chan DoesNotExist
}
